client-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: react-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: react
  template:
    metadata:
      labels:
        component: react
    spec:
      containers:
        - name: react-hello-world
          image: iditg/hello-world:latest
          ports:
            - containerPort: 3000
