deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: react-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: react
  template:
    metadata:
      labels:
        component: react
        app: react-hello-world
      annotations:
        "consul.hashicorp.com/service-name": "React-HelloWorld"
        "consul.hashicorp.com/service-tags": "application"
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/connect-service-protocol": "80" 
    spec:
      containers:
        - name: react-hello-world
          image: iditg/hello-world:latest
          ports:
            - containerPort: 80
        
        - name: prometheus-statsd
          image: prom/statsd-exporter:latest
          ports:
            - name: metrics
              containerPort: 9102
            - name: statsd
              containerPort: 9125
          resources:
            limits:
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
