lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-hello-world
  namespace : default
  labels:
    app: react-hello-world
spec:
  ports:
  - name: tcp
    port: 80
    protocol : TCP
    targetPort: 80
  selector:
    app: react-hello-world
  type: LoadBalancer
